# cat-tube

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  privatekey.pem  tsconfig.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml  node.js.yml
backend/: server.ts
config/: custom-environment-variables.ts  default.ts  publickey.pem
docs/: CNAME  index.md
frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/locales/: index.d.ts  index.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  request.ts  store.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
src/: app.ts  routes.ts
src/controller/: ads.controller.ts  auth.controller.ts  category.controller.ts  comment.controller.ts  history.controller.ts  like.controller.ts  post.controller.ts  product.controller.ts  reply.controller.ts  session.controller.ts  sub.controller.ts  subscription.controller.ts  upload.controller.ts  user.controller.ts
src/middleware/: deserializeUser.ts  requireAdmin.ts  requireUser.ts  validateResource.ts  validateResourse.ts
src/model/: History.model.ts  ads.model.ts  category.model.ts  comment.model.ts  feeling.model.ts  history.model.ts  index.ts  like.model.ts  post.model.ts  reply.model.ts  session.models.ts  subscription.model.ts  user.model.ts
src/models/: product.model.ts  session.model.ts  user.model.ts
src/routes/: auth.routes.ts  category.routes.ts  comment.routes.ts  index.ts  (+7 more)
static/: T.afdesign  cat-tube.afphoto  static.7z
(+144 files in other folders)
